--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "version": "1.0.2",
     "publisher": "Waaatza",
     "engines": {
-        "vscode": "^1.25.0"
+        "vscode": "^1.85.0"
     },
     "icon": "media/pimcore.webp",
     "categories": [
@@ -288,18 +288,18 @@
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
         "@types/mocha": "^2.2.42",
         "@types/node": "^7.0.43",
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6"
+        "@types/vscode": "^1.109.0",
+        "@vscode/test-electron": "^2.5.2",
+        "typescript": "^2.6.1"
     },
     "dependencies": {
         "graceful-fs": "^4.1.15",
-        "strip-json-comments": "^2.0.1",
-        "php-parser": "^3.0.0-prerelease.7"
+        "php-parser": "^3.0.0-prerelease.7",
+        "strip-json-comments": "^2.0.1"
     }
 }
